# libsodium-file-crypter

./: .gitignore  CMakeLists.txt  README.md  main.c
crypto/: decrypt_file.c  decrypt_file.h  encrypt_file.c  encrypt_file.h  initialize_libsodium.c  initialize_libsodium.h
utils/: argument_parser.c  argument_parser.h  file_utils.c  file_utils.h  logger.c  logger.h
